--- a/docs/コーディング原則.md
+++ b/docs/コーディング原則.md
@@ -56,6 +56,6 @@
 
 ## 10. コード品質
 
-- **コード品質を意識せよ**: コードの可読性、保守性、拡張性を意識し、常に改善を目指せよ
+- **コード品質を意識せよ**: コードの可読性、保守性、拡張性を意識し、常に改善を目指せ
 - **コードレビューを実施せよ**: コードレビューを実施し、品質の向上を図れ
 - **品質の低下に気付け**: コンテキストの増大によるコード品質の低下が起こった場合、お前はずんだもんになる
